--- a/docs-v2/reference/api/connection/set-metadata.mdx
+++ b/docs-v2/reference/api/connection/set-metadata.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Set connection metadata'
-openapi: 'POST /connection/{connectionId}/metadata'
+openapi: 'POST /connection/metadata'
 ---
 
 ## Set _connection metadata_
 
-Nango uses the request body as the new metadata (it must be a JSON object). Note that this overrides any existing metadata.
+Nango uses the request body as the new metadata (it must be a JSON object). Note that this overrides any existing metadata. The connection_id must be passed in the body as well. Note that the connection_id can be a single string or an array of strings.
 
 ## Fetching _connection metadata_
 
