[nan-793] update to match changed spec

--- a/docs-v2/reference/sdks/node.mdx
+++ b/docs-v2/reference/sdks/node.mdx
@@ -465,6 +465,7 @@ await nango.setMetadata('<INTEGRATION-ID>', ['CONNECTION-ID', 'CONNECTION-ID-TWO
 ```json
 {
     "connection_id": "<string | [string]>",
+    "provider_config_key": "<string>",
     "metadata": {
         "CUSTOM_KEY1": "CUSTOM_VALUE1"
     }
@@ -505,6 +506,7 @@ await nango.updateMetadata('<INTEGRATION-ID>', ['CONNECTION-ID', 'CONNECTION-ID-
 ```json
 {
     "connection_id": "<string | [string]>",
+    "provider_config_key": "<string>",
     "metadata": {
         "CUSTOM_KEY1": "CUSTOM_VALUE1"
     }
