feat(integrations):add support for woocommerce

--- a/docs-v2/integrations/design.mdx
+++ b/docs-v2/integrations/design.mdx
@@ -12,4 +12,5 @@
     <Card title="Mural" href="/integrations/all/mural" color="#68a063" />
     <Card title="Pinterest" href="/integrations/all/pinterest" color="#68a063" />
     <Card title="Squarespace" href="/integrations/all/squarespace" color="#68a063" />
+    <Card title="Woocommerce" href="/integrations/all/woocommerce" color="#68a063" />
 </CardGroup>
