--- a/docs-v2/integrations/ecommerce.mdx
+++ b/docs-v2/integrations/ecommerce.mdx
@@ -13,5 +13,6 @@ sidebarTitle: E-Commerce
     <Card title="Gorgias" href="/integrations/all/gorgias" color="#68a063" />
     <Card title="Gumroad" href="/integrations/all/gumroad" color="#68a063" />
     <Card title="Shopify" href="/integrations/all/shopify" color="#68a063" />
+    <Card title="Woocommerce" href="/integrations/all/woocommerce" color="#68a063" />
     <Card title="Zoho Inventory" href="/integrations/all/zoho-inventory" color="#68a063" />
 </CardGroup>
