--- a/docs-v2/reference/sdks/node.mdx
+++ b/docs-v2/reference/sdks/node.mdx
@@ -434,10 +434,13 @@ const myTypedMetadata = await nango.getMetadata<CustomMetadata>('<INTEGRATION-ID
 
 ### Set connection metadata
 
-Set custom metadata for the connection (overrides existing metadata).
+Set custom metadata for the connection or connections (overrides existing metadata).
 
 ```js
 await nango.setMetadata('<INTEGRATION-ID>', 'CONNECTION-ID', { 'CUSTOM_KEY1': 'CUSTOM_VALUE1' });
+
+# set an array of connection ids
+await nango.setMetadata('<INTEGRATION-ID>', ['CONNECTION-ID', 'CONNECTION-ID-TWO'], { 'CUSTOM_KEY1': 'CUSTOM_VALUE1' });
 ```
 
 **Parameters**
@@ -447,8 +450,8 @@ await nango.setMetadata('<INTEGRATION-ID>', 'CONNECTION-ID', { 'CUSTOM_KEY1': 'C
         The integration ID of the connection.
     </ResponseField>
 
-    <ResponseField name="connectionId" type="string" required>
-        The connection ID.
+    <ResponseField name="connectionId" type="string | string[]" required>
+        The connection ID or connection IDs.
     </ResponseField>
 
     <ResponseField name="metadata" type="Record<string, any>" required>
@@ -458,14 +461,27 @@ await nango.setMetadata('<INTEGRATION-ID>', 'CONNECTION-ID', { 'CUSTOM_KEY1': 'C
 
 **Response**
 
-Empty response.
+<Expandable>
+```json
+{
+    "connection_id": "<string | [string]>",
+    "provider_config_key": "<string>",
+    "metadata": {
+        "CUSTOM_KEY1": "CUSTOM_VALUE1"
+    }
+}
+```
+</Expandable>
 
 ### Edit connection metadata
 
-Edit custom metadata for the connection. Only overrides specified properties, not the entire metadata.
+Edit custom metadata for the connection or connections. Only overrides specified properties, not the entire metadata.
 
 ```js
 await nango.updateMetadata('<INTEGRATION-ID>', 'CONNECTION-ID', { 'CUSTOM_KEY1': 'CUSTOM_VALUE1' });
+
+# update an array of connection ids
+await nango.updateMetadata('<INTEGRATION-ID>', ['CONNECTION-ID', 'CONNECTION-ID-TWO'], { 'CUSTOM_KEY1': 'CUSTOM_VALUE1' });
 ```
 
 **Parameters**
@@ -475,8 +491,8 @@ await nango.updateMetadata('<INTEGRATION-ID>', 'CONNECTION-ID', { 'CUSTOM_KEY1':
         The integration ID of the connection.
     </ResponseField>
 
-    <ResponseField name="connectionId" type="string" required>
-        The connection ID.
+    <ResponseField name="connectionId" type="string | string[]" required>
+        The connection ID or connection IDs.
     </ResponseField>
 
     <ResponseField name="metadata" type="Record<string, any>" required>
@@ -486,7 +502,17 @@ await nango.updateMetadata('<INTEGRATION-ID>', 'CONNECTION-ID', { 'CUSTOM_KEY1':
 
 **Response**
 
-Empty response.
+<Expandable>
+```json
+{
+    "connection_id": "<string | [string]>",
+    "provider_config_key": "<string>",
+    "metadata": {
+        "CUSTOM_KEY1": "CUSTOM_VALUE1"
+    }
+}
+```
+</Expandable>
 
 ### Delete a connection
 
