--- a/docs-v2/integrations/payment.mdx
+++ b/docs-v2/integrations/payment.mdx
@@ -11,4 +11,5 @@
     <Card title="Splitwise" href="/integrations/all/splitwise" color="#68a063" />
     <Card title="Squareup" href="/integrations/all/squareup" color="#68a063" />
     <Card title="Stripe" href="/integrations/all/stripe" color="#68a063" />
+    <Card title="Tremendous" href="/integrations/all/tremendous" color="#68a063" />
 </CardGroup>
