--- a/docs-v2/integrations/all/wrike.mdx
+++ b/docs-v2/integrations/all/wrike.mdx
@@ -29,6 +29,6 @@ API configurations: [`wrike`](https://nango.dev/providers.yaml)
 
 -   Wrike enforces a rate limit of 400 requests per minute. For more information, checkout [wrike API rate limits](https://developers.wrike.com/faq/#:~:text=Our%20current%20rate,Center%20Request).
 -   You can find scopes required for each API method in their corresponding method section.
--   Currently, we support the latest version, V4, which allows access to data from only one account at a time.
+-   Currently, Nango supports the latest version, V4, which allows access to data from only one account at a time. For more information, checkout [wrike migration from V3](https://developers.wrike.com/migration-from-api-v3/)
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/wrike.mdx)</Note>
