--- a/docs-v2/integrations/communication.mdx
+++ b/docs-v2/integrations/communication.mdx
@@ -18,6 +18,7 @@ sidebarTitle: Communication
     <Card title="Front" href="/integrations/all/front" color="#68a063" />
     <Card title="Gmail" href="/integrations/all/google-mail" color="#68a063" />
     <Card title="Help Scout" href="/integrations/all/helpscout" color="#68a063" />
+    <Card title="Mailgun" href="/integrations/all/mailgun" color="#68a063" />
     <Card title="Microsoft Teams" href="/integrations/all/microsoft-teams" color="#68a063" />
     <Card title="RingCentral" href="/integrations/all/ring-central" color="#68a063" />
     <Card title="Sendgrid" href="/integrations/all/sendgrid" color="#68a063" />
