--- a/docs-v2/integrations/legal.mdx
+++ b/docs-v2/integrations/legal.mdx
@@ -8,4 +8,5 @@
     <Card title="BoldSign" href="/integrations/all/boldsign" color="#68a063" />
     <Card title="DocuSign" href="/integrations/all/docusign" color="#68a063" />
     <Card title="PandaDoc" href="/integrations/all/pandadoc" color="#68a063" />
+    <Card title="Signnow" href="/integrations/all/signnow" color="#68a063" />
 </CardGroup>
