--- a/docs-v2/integrations/all/productboard.mdx
+++ b/docs-v2/integrations/all/productboard.mdx
@@ -19,10 +19,10 @@ API configuration: [`productboard`](https://nango.dev/providers.yaml)
 
 ## Getting started
 
--   [How Register an Application](https://developer.productboard.com/docs/how-to-integrate-with-productboard-via-oauth2-developer-documentation#registering-an-oauth2-application)
--   [OAuth-related docs](https://developer.productboard.com/docs/how-to-integrate-with-productboard-via-oauth2-developer-documentation)
+-   [How to Register an Application](https://developer.productboard.com/docs/how-to-integrate-with-productboard-via-oauth2-developer-documentation#registering-an-oauth2-application)
+-   [OAuth related docs](https://developer.productboard.com/docs/how-to-integrate-with-productboard-via-oauth2-developer-documentation)
 -   [Scopes](https://developer.productboard.com/docs/how-to-integrate-with-productboard-via-oauth2-developer-documentation#access-scopes)
--   [Productboard API docs (their REST API)](https://developer.productboard.com/reference/introduction)
+-   [Productboard REST API docs](https://developer.productboard.com/reference/introduction)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
