--- a/docs-v2/integrations/all/wrike.mdx
+++ b/docs-v2/integrations/all/wrike.mdx
@@ -20,8 +20,8 @@ API configurations: [`wrike`](https://nango.dev/providers.yaml)
 ## Getting started
 
 -   [Register an Application](https://www.wrike.com/frontend/apps/index.html#/api)
--   [OAuth-related docs](https://developers.wrike.com/oauth-20-authorization)
--   [Wrike API docs](https://developers.wrike.com/overview)
+-   [OAuth related docs](https://developers.wrike.com/oauth-20-authorization)
+-   [Wrike REST API docs](https://developers.wrike.com/overview)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
