--- a/docs-v2/integrations/all/signnow.mdx
+++ b/docs-v2/integrations/all/signnow.mdx
@@ -20,7 +20,7 @@ API configuration: [`signnow`](https://nango.dev/providers.yaml), [`signnow-sand
 ## Getting started
 
 -   [How to register an Application](https://docs.signnow.com/docs/signnow/account)
--   [OAuth-related docs](https://docs.signnow.com/docs/signnow/features#authentication)
+-   [OAuth related docs](https://docs.signnow.com/docs/signnow/features#authentication)
 -   [Signnow REST API docs](https://docs.signnow.com/docs/signnow/welcome)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
