--- a/docs-v2/reference/sdks/node.mdx
+++ b/docs-v2/reference/sdks/node.mdx
@@ -958,7 +958,7 @@ await nango.updateSyncConnectionFrequency('<INTEGRATION-ID>', 'SYNC_NAME', '<CON
         The connection ID. 
     </ResponseField>
     <ResponseField name="frequency" type="string" required>
-        The frequency you want to set (ex: 'every hour'). Set to `null` to revert to the default frequency.
+        The frequency you want to set (ex: 'every hour'). Set to `null` to revert to the default frequency.  Uses the https://github.com/vercel/ms notations. Min frequency: 5 minutes.
     </ResponseField>
 </Expandable>
 
