--- a/docs-v2/integrations/all/signnow.mdx
+++ b/docs-v2/integrations/all/signnow.mdx
@@ -1,6 +1,6 @@
 ---
-title: Signnow
-sidebarTitle: Signnow
+title: SignNow
+sidebarTitle: SignNow
 ---
 
 API configuration: [`signnow`](https://nango.dev/providers.yaml), [`signnow-sandbox`](https://nango.dev/providers.yaml)
@@ -21,11 +21,11 @@ API configuration: [`signnow`](https://nango.dev/providers.yaml), [`signnow-sand
 
 -   [How to register an Application](https://docs.signnow.com/docs/signnow/account)
 -   [OAuth related docs](https://docs.signnow.com/docs/signnow/features#authentication)
--   [Signnow REST API docs](https://docs.signnow.com/docs/signnow/welcome)
+-   [SignNow REST API docs](https://docs.signnow.com/docs/signnow/welcome)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
-- Signnow provides different base url for both sandbox and production environments. For more information check [Signnow Base URL](https://docs.signnow.com/docs/signnow/get-started)
+- SignNow provides different base url for both sandbox and production environments. For more information check [SignNow Base URL](https://docs.signnow.com/docs/signnow/get-started)
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/signnow.mdx)</Note>
