--- a/docs-v2/host/self-host/self-hosting-instructions.mdx
+++ b/docs-v2/host/self-host/self-hosting-instructions.mdx
@@ -118,17 +118,17 @@ You can disable telemetry by setting the env var `TELEMETRY=false` (in the
 We use Elasticsearch to store Nango's execution logs and power the logs UI.
 To limit the requirements to self-host, this stack is optional and up to the developper to setup.
 
-If you want to enable logs, you will need to first:
-- Host an elasticsearch cluster in the way you want
-- Update your environment variables, set `NANGO_LOGS_ENABLED=true` and add the appropriate values in `NANGO_LOGS_ES_*`
+If you want to enable logs, you will need to:
+- Host an Elasticsearch cluster
+- Update your environment variables, with `NANGO_LOGS_ENABLED=true` and add the appropriate values in `NANGO_LOGS_ES_*`
 
 ### Hosting
 
-To host elasticsearch you have multiple solutions:
+To host an Elasticsearch cluster you have multiple solutions:
 
-- Locally: uncomment the service inside [`docker-compose.yml`](https://github.com/NangoHQ/nango/blob/master/docker-compose.yaml#L63) and run `docker-compose up -d`
-- ElasticCloud: use the minimal installation on Standard tier, about 20€/mo [elastic.co](https://www.elastic.co/)
-- Render: deploy a free instance [doc](https://docs.render.com/deploy-elasticsearch)
+- Locally: uncomment the service inside `docker-compose.yml` ([GitHub](https://github.com/NangoHQ/nango/blob/master/docker-compose.yaml#L63)) and run `docker-compose up`
+- ElasticCloud: minimal installation on Standard tier is about 20€/mo ([elastic.co](https://www.elastic.co/))
+- Render: deploy a free instance ([render.com](https://docs.render.com/deploy-elasticsearch))
 
 ### Alternatives
 
