--- a/docs-v2/integrations/communication.mdx
+++ b/docs-v2/integrations/communication.mdx
@@ -19,8 +19,10 @@ sidebarTitle: Communication
     <Card title="Gmail" href="/integrations/all/google-mail" color="#68a063" />
     <Card title="Help Scout" href="/integrations/all/helpscout" color="#68a063" />
     <Card title="Microsoft Teams" href="/integrations/all/microsoft-teams" color="#68a063" />
+    <Card title="Outlook" href="/integrations/all/outlook" color="#68a063" />
     <Card title="RingCentral" href="/integrations/all/ring-central" color="#68a063" />
     <Card title="Sendgrid" href="/integrations/all/sendgrid" color="#68a063" />
+    <Card title="SharePoint Online" href="/integrations/all/sharepoint-online" color="#68a063" />
     <Card title="Slack" href="/integrations/all/slack" color="#68a063" />
     <Card title="Wildix PBX" href="/integrations/all/wildix-pbx" color="#68a063" />
     <Card title="Zoho Mail" href="/integrations/all/zoho-mail" color="#68a063" />
