--- a/docs-v2/integrations/storage.mdx
+++ b/docs-v2/integrations/storage.mdx
@@ -14,5 +14,6 @@ sidebarTitle: Storage
     <Card title="Egnyte" href="/integrations/all/egnyte" color="#68a063" />
     <Card title="Google Drive" href="/integrations/all/google-drive" color="#68a063" />
     <Card title="NextCloud" href="/integrations/all/next-cloud" color="#68a063" />
-    <Card title="One Drive" href="/integrations/all/one-drive" color="#68a063" />
+    <Card title="OneDrive" href="/integrations/all/one-drive" color="#68a063" />
+    <Card title="SharePoint Online" href="/integrations/all/sharepoint-online" color="#68a063" />
 </CardGroup>
