--- a/docs-v2/integrations/all/microsoft-entra-id.mdx
+++ b/docs-v2/integrations/all/microsoft-entra-id.mdx
@@ -3,7 +3,7 @@ title: Microsoft Entra ID
 sidebarTitle: Microsoft Entra ID
 ---
 
-API configuration: [`one-note`](https://nango.dev/providers.yaml)
+API configuration: [`microsoft-entra-id`](https://nango.dev/providers.yaml)
 
 ## Features
 
@@ -30,4 +30,4 @@ API configuration: [`one-note`](https://nango.dev/providers.yaml)
 -   To get refresh token, you will need to add **`offline_access`** to the list of your scopes.
 -   You can find permissions required for each API call in their corresponding API methods section.
 
-<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/microsoft-entra-ID.mdx)</Note>
+<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/microsoft-entra-id.mdx)</Note>
