--- a/docs-v2/integrations/all/outlook.mdx
+++ b/docs-v2/integrations/all/outlook.mdx
@@ -21,7 +21,7 @@ API configuration: [`outlook`](https://nango.dev/providers.yaml)
 
 -   [How to register an Application](https://learn.microsoft.com/en-us/graph/auth-register-app-v2)
 -   [OAuth related docs](https://learn.microsoft.com/en-us/graph/auth-v2-user?tabs=http#authentication-and-authorization-steps)
--   [Web API docs (their REST API)](https://learn.microsoft.com/en-us/outlook/rest/#outlook-rest-api-via-microsoft-graph)
+-   [REST API docs](https://learn.microsoft.com/en-us/outlook/rest/#outlook-rest-api-via-microsoft-graph)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
