--- a/docs-v2/integrations/all/sharepoint-online.mdx
+++ b/docs-v2/integrations/all/sharepoint-online.mdx
@@ -21,7 +21,7 @@ API configuration: [`sharepoint-online`](https://nango.dev/providers.yaml)
 
 -   [How to register an Application](https://learn.microsoft.com/en-us/onedrive/developer/rest-api/getting-started/graph-oauth?view=odsp-graph-online#register-your-app)
 -   [OAuth related docs](https://learn.microsoft.com/en-us/onedrive/developer/rest-api/getting-started/authentication?view=odsp-graph-online#microsoft-graph-onedrive-and-sharepoint-online)
--   [Web API docs (their REST API)](https://learn.microsoft.com/en-us/graph/api/resources/sharepoint?view=graph-rest-1.0)
+-   [REST API docs](https://learn.microsoft.com/en-us/graph/api/resources/sharepoint?view=graph-rest-1.0)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
