--- a/docs-v2/integrations/all/mailgun.mdx
+++ b/docs-v2/integrations/all/mailgun.mdx
@@ -25,6 +25,6 @@ API configuration: [`mailgun`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 
-_None yet, add yours!_
+When adding a new connection, api is the region for US-based customers, and api.eu is the region for EU-based customers.
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/mailgun.mdx)</Note>
