--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -32,6 +32,7 @@ sidebarTitle: Productivity
     <Card title="Monday" href="/integrations/all/monday" color="#68a063" />
     <Card title="Mural" href="/integrations/all/mural" color="#68a063" />
     <Card title="Notion" href="/integrations/all/notion" color="#68a063" />
+    <Card title="OneNote" href="/integrations/all/one-note" color="#68a063" />
     <Card title="Pingboard" href="/integrations/all/pingboard" color="#68a063" />
     <Card title="Pivotaltracker" href="/integrations/all/pivotaltracker" color="#68a063" />
     <Card title="Productboard" href="/integrations/all/productboard" color="#68a063" />
