feat(integrations): add support for datev

--- a/docs-v2/integrations/payroll.mdx
+++ b/docs-v2/integrations/payroll.mdx
@@ -9,6 +9,7 @@ sidebarTitle: Payroll
 </Tip>
 
 <CardGroup cols={4}>
+    <Card title="Datev" href="/integrations/all/datev" color="#68a063" />
     <Card title="Deel" href="/integrations/all/deel" color="#68a063" />
     <Card title="Gusto" href="/integrations/all/gusto" color="#68a063" />
     <Card title="Payfil" href="/integrations/all/payfit" color="#68a063" />
