--- a/docs-v2/integrations/hr.mdx
+++ b/docs-v2/integrations/hr.mdx
@@ -10,6 +10,7 @@ sidebarTitle: HR
 
 <CardGroup cols={4}>
     <Card title="BambooHR" href="/integrations/all/bamboohr" color="#68a063" />
+    <Card title="Datev" href="/integrations/all/datev" color="#68a063" />
     <Card title="Deel" href="/integrations/all/deel" color="#68a063" />
     <Card title="Factorial" href="/integrations/all/factorial" color="#68a063" />
     <Card title="Gusto" href="/integrations/all/gusto" color="#68a063" />
