--- a/docs-v2/integrations/all/highlevel.mdx
+++ b/docs-v2/integrations/all/highlevel.mdx
@@ -3,7 +3,7 @@ title: HighLevel
 sidebarTitle: HighLevel
 ---
 
-API configuration: [`highlevel`](https://nango.dev/providers.yaml)
+API configuration: [`highlevel`](https://nango.dev/providers.yaml), [`highlevel-white-label`](https://nango.dev/providers.yaml)
 
 ## Features
 
@@ -19,10 +19,17 @@ API configuration: [`highlevel`](https://nango.dev/providers.yaml)
 
 ## Getting started
 
--   [API Documentation](https://highlevel.stoplight.io/docs/integrations/0443d7d1a4bd0-overview)
+-   [How to register an Application](https://highlevel.stoplight.io/docs/integrations/a04191c0fabf9-authorization#1-register-an-oauth-app)
+-   [OAuth related docs](https://highlevel.stoplight.io/docs/integrations/a04191c0fabf9-authorization)
+-   [List of OAuth scopes](https://highlevel.stoplight.io/docs/integrations/vcctp9t1w8hja-scopes)
+-   [HighLevel REST API docs](https://highlevel.stoplight.io/docs/integrations/0443d7d1a4bd0-overview)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
+-   HighLevel offers two different authorization flows for their users. The `standard` option allows for general OAuth2 authentication, while the `highlevel-white-label` option allows users to generate access tokens, enabling them to white-label the platform. This means users can rebrand the platform with their own branding elements and customize it to match their brand identity
+-   HighLevel enforces rate limits for its public V2 APIs. For more details check [HighLevel rate limits](https://highlevel.stoplight.io/docs/integrations/a04191c0fabf9-authorization#what-are-current-rate-limits-for-api-20).
+-   When creating an app, there are 2 types of access: Location Level Access (also known as Sub-Account) and Agency Level Access (also known as Company). These access levels provide comprehensive control over location data at either the individual location or agency-wide level.
+-   The App Type determines the accessibility and visibility of your application. A public app is available for anyone to use and access, while a private app is restricted to a specific group or individuals and is not publicly listed in the marketplace. For more details check [profile information](https://help.gohighlevel.com/support/solutions/articles/155000000136-how-to-get-started-with-the-developer-s-marketplace#How-to-use-the-oAuth-V2-to-configure-Webhooks-for-your-apps?)
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/highlevel.mdx)</Note>
