--- a/docs-v2/integrations/all/marketo.mdx
+++ b/docs-v2/integrations/all/marketo.mdx
@@ -26,7 +26,6 @@ API configurations: [`marketo`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 
--   Marketo offers client credentials token that authorizes as app instead of a user.
--   Both `endpointURL` and `identityURL` can be found in the Admin > Web Services menu in the REST API section.
+-   Both `endpointURL` and `identityURL` can be found in the Admin > Web Services menu in the REST API section. For more details check [Marketo base url](https://developers.marketo.com/rest-api/base-url/)
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/marketo.mdx)</Note>
