--- a/docs-v2/integrations/marketing.mdx
+++ b/docs-v2/integrations/marketing.mdx
@@ -15,6 +15,7 @@ sidebarTitle: Marketing
     <Card title="Hubspot" href="/integrations/all/hubspot" color="#68a063" />
     <Card title="Instagram" href="/integrations/all/instagram" color="#68a063" />
     <Card title="Intercom" href="/integrations/all/intercom" color="#68a063" />
+    <Card title="Instantly" href="/integrations/all/instantly" color="#68a063" />
     <Card title="Keap" href="/integrations/all/keap" color="#68a063" />
     <Card title="Klaviyo" href="/integrations/all/klaviyo" color="#68a063" />
     <Card title="Mailchimp" href="/integrations/all/mailchimp" color="#68a063" />
