--- a/docs-v2/integrations/marketing.mdx
+++ b/docs-v2/integrations/marketing.mdx
@@ -30,4 +30,6 @@ sidebarTitle: Marketing
     <Card title="Twitter" href="/integrations/all/twitter" color="#68a063" />
     <Card title="Zoho Bigin" href="/integrations/all/zoho-bigin" color="#68a063" />
     <Card title="Microsoft Ads" href="/integrations/all/microsoft-ads" color="#68a063" />
+    <Card title="Zoominfo" href="/integrations/all/zoominfo" color="#68a063" />
+
 </CardGroup>
