--- a/docs-v2/integrations/video.mdx
+++ b/docs-v2/integrations/video.mdx
@@ -11,6 +11,7 @@ sidebarTitle: Video
 <CardGroup cols={4}>
     <Card title="Pinterest" href="/integrations/all/pinterest" color="#68a063" />
     <Card title="Twitch" href="/integrations/all/twitch" color="#68a063" />
+    <Card title="Vimeo" href="/integrations/all/vimeo" color="#68a063" />
     <Card title="Youtube" href="/integrations/all/youtube" color="#68a063" />
     <Card title="Zoom" href="/integrations/all/zoom" color="#68a063" />
 </CardGroup>
