feat(integrations): add support for fireflies

--- a/docs-v2/integrations/communication.mdx
+++ b/docs-v2/integrations/communication.mdx
@@ -15,6 +15,7 @@ sidebarTitle: Communication
     <Card title="Dialpad" href="/integrations/all/dialpad" color="#68a063" />
     <Card title="Discord" href="/integrations/all/discord" color="#68a063" />
     <Card title="Facebook" href="/integrations/all/facebook" color="#68a063" />
+    <Card title="Fireflies" href="/integrations/all/fireflies" color="#68a063" />
     <Card title="Front" href="/integrations/all/front" color="#68a063" />
     <Card title="Gmail" href="/integrations/all/google-mail" color="#68a063" />
     <Card title="Help Scout" href="/integrations/all/helpscout" color="#68a063" />
