--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -18,6 +18,7 @@ sidebarTitle: Productivity
     <Card title="Envoy" href="/integrations/all/envoy" color="#68a063" />
     <Card title="Figjam" href="/integrations/all/figjam" color="#68a063" />
     <Card title="Figma" href="/integrations/all/figma" color="#68a063" />
+    <Card title="Fireflies" href="/integrations/all/fireflies" color="#68a063" />
     <Card title="Google Calendar" href="/integrations/all/google-calendar" color="#68a063" />
     <Card title="Google Docs" href="/integrations/all/google-docs" color="#68a063" />
     <Card title="Gmail" href="/integrations/all/google-mail" color="#68a063" />
