feat(integrations): add Jira Data Center support

--- a/docs-v2/integrations/ticketing.mdx
+++ b/docs-v2/integrations/ticketing.mdx
@@ -33,6 +33,7 @@ Ask us in the [Slack community](https://nango.dev/slack), and we can help you qu
     <Card title="Gitlab" href="/integrations/all/gitlab" color="#68a063" />
     <Card title="Intercom" href="/integrations/all/intercom" color="#68a063" />
     <Card title="Jira" href="/integrations/all/jira" color="#68a063" />
+    <Card title="Jira Data Center" href="/integrations/all/jira-data-center" color="#68a063" />
     <Card title="Linear" href="/integrations/all/linear" color="#68a063" />
     <Card title="Monday" href="/integrations/all/monday" color="#68a063" />
     <Card title="Teamwork" href="/integrations/all/teamwork" color="#68a063" />
