--- a/docs-v2/integrations/all/jira-data-center.mdx
+++ b/docs-v2/integrations/all/jira-data-center.mdx
@@ -21,9 +21,12 @@ API configuration: [`jira-data-center`](https://nango.dev/providers.yaml)
 
 -   [How to create an incoming Application Link](https://confluence.atlassian.com/adminjiraserver/configure-an-incoming-link-1115659067.html)
 -   [OAuth related docs](https://confluence.atlassian.com/adminjiraserver/jira-oauth-2-0-provider-api-1115659070.html)
+-   [List of OAuth scopes](https://confluence.atlassian.com/adminjiraserver/jira-oauth-2-0-provider-api-1115659070.html#JiraOAuth2.0providerAPI-scopes)
 -   [Jira Data Center API docs](https://docs.atlassian.com/software/jira/docs/api/REST/9.14.0/)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
--   TBD
+-  Jira Data Center enforce HTTPS for the base URL of production environments. You can use insecure URIs and base URLs for staging or development environments by enabling the relevant [system properties](https://confluence.atlassian.com/adminjiraserver/oauth-2-0-provider-system-properties-1115659073.html)
+
+<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/jira-data-center.mdx)</Note>
