--- a/docs-v2/understand/concepts/scripts.mdx
+++ b/docs-v2/understand/concepts/scripts.mdx
@@ -51,8 +51,7 @@ Upon deployment, integration scripts are stored in blob storage. The Nango runne
 ### Limitations
 
 Scripts do not yet support:
-- local file imports, but you can call action scripts from other integration scripts, as a workaround. 
-- external dependencies, but some pre-included dependencies are available, with the possibility of requesting more via the [community](https://nango.dev/slack).
+- external dependencies, but [some pre-included dependencies are available](/reference/scripts##pre-included-dependencies), with the possibility of requesting more via the [community](https://nango.dev/slack).
 
 We will build support for both as soon as possible.
 
