feat(integrations): add support for various oauth2_cc providers

--- a/docs-v2/integrations/all/spotify.mdx
+++ b/docs-v2/integrations/all/spotify.mdx
@@ -3,7 +3,7 @@ title: Spotify
 sidebarTitle: Spotify
 ---
 
-API configuration: [`spotify`](https://nango.dev/providers.yaml)
+API configuration: [`spotify`](https://nango.dev/providers.yaml), [`spotify-oauth2-cc`](https://nango.dev/providers.yaml)
 
 ## Features
 
@@ -27,5 +27,5 @@ API configuration: [`spotify`](https://nango.dev/providers.yaml)
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
-
+-   Spotify offers a client credentials token that authorizes as app instead of a user. This is listed under `spotify-oauth2-cc`. For more details check [spotify client credentials flow](https://developer.spotify.com/documentation/web-api/tutorials/client-credentials-flow)
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/spotify.mdx)</Note>
