--- a/docs-v2/integrations/other.mdx
+++ b/docs-v2/integrations/other.mdx
@@ -13,6 +13,7 @@ sidebarTitle: Other
     <Card title="Atlassian" href="/integrations/all/atlassian" color="#68a063" />
     <Card title="Auth0" href="/integrations/all/auth0" color="#68a063" />
     <Card title="Bitdefender" href="/integrations/all/bitdefender" color="#68a063" />
+    <Card title="Cloudentity" href="/integrations/all/cloudentity" color="#68a063" />
     <Card title="Entrata" href="/integrations/all/entrata" color="#68a063" />
     <Card title="Exist" href="/integrations/all/exist" color="#68a063" />
     <Card title="Exact Online" href="/integrations/all/exact-online" color="#68a063" />
@@ -25,6 +26,7 @@ sidebarTitle: Other
     <Card title="Linkhut" href="/integrations/all/linkhut" color="#68a063" />
     <Card title="Okta NLA" href="/integrations/all/okta" color="#68a063" />
     <Card title="Osu!" href="/integrations/all/osu" color="#68a063" />
+    <Card title="Ory" href="/integrations/all/ory" color="#68a063" />
     <Card title="Microsoft Entra ID" href="/integrations/all/microsoft-entra-id" color="#68a063" />
     <Card title="ServiceM8" href="/integrations/all/servicem8" color="#68a063" />
     <Card title="ServiceNow" href="/integrations/all/servicenow" color="#68a063" />
