--- a/docs-v2/integrations/all/ory.mdx
+++ b/docs-v2/integrations/all/ory.mdx
@@ -27,5 +27,6 @@ API configurations: [`ory`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 
--   When creating a new application and connection in Nango, you need to add your `project_id`. For more details on how to get your `project_id`, have a look at [connecting to Ory network](https://www.ory.sh/docs/guides/permissions/overview#connecting-to-ory-network-via-cli)
+-   When creating a new application, you need to supply your `project_id`. This can be located under the Project Settings tab for the specific project.
+-   When creating a new connection in Nango, you will need to add your `projectSlug`, which is also located under the Project Settings tab for the specific project.
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/ory.mdx)</Note>
