Remove empty docs pages and fix broken links

--- a/docs-v2/integrate/guides/advanced/use-custom-field-mappings.mdx
+++ b/docs-v2/integrate/guides/advanced/use-custom-field-mappings.mdx
@@ -72,7 +72,7 @@ curl --request POST \
 </Tab>
 </Tabs>
 
-The sync's internal logic will use the field mappings to fetch the relevant data from custom fields ([step-by-step guide](/customize/guides/advanced/support-custom-field-mappings)).
+The sync's internal logic will use the field mappings to fetch the relevant data from custom fields.
 
 <Tip>
 **Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
