--- a/docs-v2/integrations/overview.mdx
+++ b/docs-v2/integrations/overview.mdx
@@ -90,4 +90,4 @@ Nango is pre-configured for 190+ APIs and integration templates.
 Missing an API or integration template?
 
 - request it in the [community](https://nango.dev/slack); we deliver them in &lt;48h
-- contribute it; it's fast & easy ([new API](/customize/guides/contribute-an-integration-template) / [new integration template](/customize/guides/contribute-an-integration-template))
+- contribute it; it's fast & easy ([new API](/customize/guides/contribute-an-api))
