feat(integrations): add support for wordpress

--- a/docs-v2/integrations/cms.mdx
+++ b/docs-v2/integrations/cms.mdx
@@ -10,4 +10,5 @@ sidebarTitle: CMS
 
 <CardGroup cols={4}>
     <Card title="Contentstack" href="/integrations/all/contentstack" color="#68a063" />
+    <Card title="Wordpress" href="/integrations/all/wordpress" color="#68a063" />
 </CardGroup>
