--- a/docs-v2/integrations/dev-tools.mdx
+++ b/docs-v2/integrations/dev-tools.mdx
@@ -26,5 +26,6 @@ sidebarTitle: Developer Tools
     <Card title="Snowflake" href="/integrations/all/snowflake" color="#68a063" />
     <Card title="Squarespace" href="/integrations/all/squarespace" color="#68a063" />
     <Card title="Woocommerce" href="/integrations/all/woocommerce" color="#68a063" />
+    <Card title="Wordpress" href="/integrations/all/wordpress" color="#68a063" />
     <Card title="Wakatime" href="/integrations/all/wakatime" color="#68a063" />
 </CardGroup>
