--- a/docs-v2/integrations/integration-templates/unanet.mdx
+++ b/docs-v2/integrations/integration-templates/unanet.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Checkr Partner API Integration Template'
-sidebarTitle: 'Checkr Partner'
+title: 'Unanet API Integration Template'
+sidebarTitle: 'Unanet'
 ---
 
-## Get started with the Checkr Partner template
+## Get started with the Unanet template
 
 <Card title="How to use integration templates"
       href="/understand/concepts/templates"
@@ -11,11 +11,13 @@ sidebarTitle: 'Checkr Partner'
     Learn how to use integration templates in Nango
 </Card>
 
-<Card title="Get the Checkr Partner template"
-      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/checkr-partner"
+<Card title="Get the Unanet template"
+      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/unanet"
       icon="github">
-    Get the latest version of the Checkr Partner integration template from GitHub
+    Get the latest version of the Unanet integration template from GitHub
 </Card>
 
 ## Need help with the template?
 Please reach out in the [Slack community](https://nango.dev/slack), we are very active there and happy to help!
+
+
