--- a/docs-v2/integrations/design.mdx
+++ b/docs-v2/integrations/design.mdx
@@ -14,4 +14,5 @@
     <Card title="Pinterest" href="/integrations/all/pinterest" color="#68a063" />
     <Card title="Squarespace" href="/integrations/all/squarespace" color="#68a063" />
     <Card title="Woocommerce" href="/integrations/all/woocommerce" color="#68a063" />
+    <Card title="Wordpress" href="/integrations/all/wordpress" color="#68a063" />
 </CardGroup>
