--- a/docs-v2/integrations/crm.mdx
+++ b/docs-v2/integrations/crm.mdx
@@ -38,6 +38,7 @@ Ask us in the [Slack community](https://nango.dev/slack) and we can help you qui
     <Card title="Insightly" href="/integrations/all/insightly" color="#68a063" />
     <Card title="Keap" href="/integrations/all/keap" color="#68a063" />
     <Card title="Kustomer" href="/integrations/all/kustomer" color="#68a063" />
+    <Card title="Medallia" href="/integrations/all/medallia" color="#68a063" />
     <Card title="Pipedrive" href="/integrations/all/pipedrive" color="#68a063" />
     <Card title="Salesforce" href="/integrations/all/salesforce" color="#68a063" />
     <Card title="Salesloft" href="/integrations/all/salesloft" color="#68a063" />
