--- a/docs-v2/integrations/support.mdx
+++ b/docs-v2/integrations/support.mdx
@@ -18,6 +18,7 @@ sidebarTitle: Support
     <Card title="Gitlab" href="/integrations/all/gitlab" color="#68a063" />
     <Card title="HubSpot" href="/integrations/all/hubspot" color="#68a063" />
     <Card title="Intercom" href="/integrations/all/intercom" color="#68a063" />
+    <Card title="Medallia" href="/integrations/all/medallia" color="#68a063" />
     <Card title="RingCentral" href="/integrations/all/ring-central" color="#68a063" />
     <Card title="StackExchange" href="/integrations/all/stackexchange" color="#68a063" />
     <Card title="Zendesk" href="/integrations/all/zendesk" color="#68a063" />
