--- a/docs-v2/integrations/all/medallia.mdx
+++ b/docs-v2/integrations/all/medallia.mdx
@@ -27,6 +27,6 @@ API configurations: [`medallia`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 -   Medallia enforces different rate limits based on the API types. For more details check [Medallia rate and limits](https://developer.medallia.com/medallia-apis/reference/integrations#rates-and-limits).
--   When creating a new connection, you will need to supply your `REPORTING_INSTANCE` and `TENANT_NAME`. The `instance` and `tenant` values are taken from the Reporting URL, such as `instance.medallia.com/tenant`.
--   You will also need to provide your `GATEWAY_URL` so as to build your Nango proxy `base_url`. This is in the form of `instance-tenant.apis.medallia.com`. The suffix `apis.medallia.com` is constant, independent of the data center. The Reporting URL is set when your Experience Cloud instance is first provisioned. For more details on this check [production instance and partner sandboxes](https://developer.medallia.com/medallia-apis/reference/integrations#production-instances-and-partner-sandboxes)
+-   When creating a new connection, you will need to supply your `reportingInstance` and `tenantName`. The `instance` and `tenant` values are taken from the Reporting URL, such as `instance.medallia.com/tenant`.
+-   You will also need to provide your `gatewayUrl` so as to build your Nango proxy `base_url`. This is in the form of `instance-tenant.apis.medallia.com`. The suffix `apis.medallia.com` is constant, independent of the data center. The Reporting URL is set when your Experience Cloud instance is first provisioned. For more details on this check [production instance and partner sandboxes](https://developer.medallia.com/medallia-apis/reference/integrations#production-instances-and-partner-sandboxes)
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/medallia.mdx)</Note>
